# Humungousaur

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.agents/: README.md
.agents/maintainer-notes/: open-source-release.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  setup_help.yml
.github/workflows/: ci.yml  release.yml
Casks/: humungousaur.rb
apps/macos/: Package.swift  README.md
browser_extensions/humungousaur_collector/: manifest.brave.json  manifest.chrome.json  manifest.edge.json  manifest.firefox.json  manifest.safari.json
bucket/: humungousaur.json
chocolatey/humungousaur/: humungousaur.nuspec
collectors/: README.md
collectors/macos/: Package.swift  README.md
collectors/shared/: event-envelope.schema.json  privacy-tiers.md
collectors/windows/: README.md
docs/: AGENT_FLOW_ARCHITECTURE_AUDIT.md  AGENT_SKILL_AUTHORING_STANDARD.md  APP_COLLECTOR_ARCHITECTURE.md  APP_CONNECTOR_DOC_VALIDATION.md  CODEX_SKILL_INTEGRATION.md  COGNITIVE_AGENT_ARCHITECTURE.md  COLLECTOR_ARCHITECTURE.md  ENGINEERING_PRINCIPLES.md  EXTERNAL_INTEGRATION_PLAN.md  GLOBAL_AGENT_INSTRUCTIONS.md  GOAL_STATUS_AND_REMAINING_WORK.md  JANUS_COLLECTOR_WORKFLOW.md  JANUS_REFLEX_ARCHITECTURE.md  OPEN_SOURCE_RELEASE_GOAL.md  PACKAGE_MANAGERS.md  PERSONAL_ASSISTANT_SKILL_SHORTLIST.md  REFERENCE_FEATURE_MATRIX.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  RESEARCH_NOTES.md  ROADMAP.md  SKILL_CAPABILITY_GOAL_PROGRESS.md  SKILL_CAPABILITY_REFERENCE_MATRIX.md  WORKSPACE_CONNECTOR_TOOL_MATRIX.md
humungousaur/: __init__.py  api.py  cli.py  client_protocol.py  config.py  desktop_chats.py  env.py  executor.py  interaction.py  orchestrator.py  performance.py  planner.py  runtime.py  schemas.py
humungousaur/active_agent/: __init__.py  entities.py  memory_promotion.py  store.py
script/: bootstrap_runtime.py  build_and_run.sh  collect_release_artifacts.py  dry_run_connectors.py  generate_release_report.py  install_windows.ps1  package_macos.sh  package_windows.ps1  run_macos_file_events.sh  verify_desktop_parity.py  verify_desktop_runtime_smoke.py  verify_macos_package.sh  verify_open_source_hygiene.py  verify_package_managers.py  verify_publication_state.py  verify_release_readiness.py  verify_release_report.py  verify_windows_package.ps1
scripts/: smoke_agent.py  smoke_complete_agent.py  smoke_real_world_tasks.py  smoke_skills.py
skills/: README.md
tests/: pdf_utils.py  test_activity_tools.py  test_analysis_tools.py  test_api.py  test_approval_queue.py  test_approvals_security.py  test_browser_extension_collectors.py  test_browser_tools.py  test_capability_surface.py  test_channel_tools.py  test_client_protocol.py  test_code_tools.py  test_cognition.py  test_collector_event_log.py  test_collectors.py  test_commerce_tools.py  test_content_tools.py  test_conversation_tools.py  test_creative_tools.py  test_design_tools.py  test_domain_capability_tools.py  test_env.py  test_executor.py  test_external_tools.py  test_file_index.py  test_github_tools.py  test_interaction_harness.py  test_janus.py  test_media_tools.py  test_memory.py  test_model_clients.py  test_model_orchestrator.py  test_network_tools.py  test_office_tools.py  test_orchestrator.py  test_performance.py  test_personal_tools.py  test_plan_traces.py  test_planning.py  test_plugin_catalog.py  (+17 more)
(+899 files in other folders)
