[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "humungousaur"
version = "0.1.0"
description = "Local-first personal desktop agent runtime with safety, tools, audit logs, and memory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
browser = ["playwright>=1.60,<2"]
pdf = ["pypdf>=5,<7", "reportlab>=4,<5"]
ocr = ["pillow>=10,<12", "pytesseract>=0.3.13,<0.4"]

[project.scripts]
humungousaur = "humungousaur.cli:main"

[tool.setuptools.packages.find]
include = ["humungousaur*"]

[tool.setuptools.package-data]
humungousaur = ["dashboard/*.html", "dashboard/*.css", "dashboard/*.js", "resources/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["external_repos", ".git", "artifacts"]
